# AIDApy

./: setup.cfg
doc/: environment.yml
doc/source/_static/css/: theme.css
doc/source/fig/: logo_AIDA.eps
examples/01_missions/: vdf_mms_overview.ipynb
examples/02_omni_regressor/: omni_dst_forecast.ipynb
