[pylint]
disable = W1202, W0102, W0613, W1401, W0511, W0105, R1702, R1705, R0912, R0915, R0902, R0903, R0914, R0913, W0621, C0103, C1801, C0303, R0201, E0710, E1121,E1101, W0212, E0401
 # logging-format-interpolation
# too-many-branches
# too-many-nested-blocks
# too-many-statements
# too-many-instance-attributes
# too-few-public-methods
# too-many-locals
# too-many-arguments
# redefined-outer-name
# invalid-name
# len-as-condition
# trailing-whitespace
# no-self-use
# E0710: Raising a new style class which doesn't inherit from BaseException (raising-non-exception)
# W0613: Unused argument
good-names = x, i, j, k
extension-pkg-whitelist = numpy, matplotlib.cm
ignored-modules = numpy, matplotlib.cm
ignored-classes = numpy, matplotlib.cm
ignore = tests, modified_cluster.py

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[aliases]
test=pytest

[tool:pytest]
#addopts = --ignore=heliopy --cov=aidapy --cov-report term --cov-report html:public --cov-config setup.cfg 
